--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bench": "node benchmark/simple/pack-zip.js"
   },
   "dependencies": {
-    "archiver-utils": "^1.0.0",
+    "archiver-utils": "git://github.com/SpanningCloudApps/archiver-utils.git#walkDirFix",
     "async": "^2.0.0",
     "buffer-crc32": "^0.2.1",
     "glob": "^7.0.0",
@@ -39,7 +39,7 @@
     "zip-stream": "^1.0.0"
   },
   "devDependencies": {
-    "archiver-jsdoc-theme": "git://github.com/SpanningCloudApps/archiver-utils.git#walkDirFix",
+    "archiver-jsdoc-theme": "^1.0.0",
     "jsdoc": "~3.4.0",
     "chai": "^3.4.0",
     "mocha": "^2.3.3",
